fix route and add google site verification

--- a/posts/_posts/artworks/2024-08-15- artworks01.md
+++ b/posts/_posts/artworks/2024-08-15- artworks01.md
@@ -6,9 +6,9 @@ date: 2024-08-15 14:29:20 +0700
 tag: "art"
 categories: art
 usemathjax: true
-img: "/posts/images/project/artwork01_thumb.jpeg"
+img: "/posts/images/artworks/artwork01_thumb.jpeg"
 ---
 
 <figure>
-    <img class="title-image" src="{{site.image_location}}/project/artwork01_main.jpeg" alt="title img">
+    <img class="title-image" src="{{site.image_location}}/artworks/artwork01_main.jpeg" alt="title img">
 </figure>
