--- a/posts/_posts/artworks/2024-10-12- artworks02.md
+++ b/posts/_posts/artworks/2024-10-12- artworks02.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title:  "Art Works 2"
+title:  "캐릭터 일러스트 작업 : 엔지니어"
 description: 
 date: 2024-10-12 18:41:30 +0700
 tag: "art"
 categories: art
 usemathjax: true
-img: "/posts/images/project/artwork02_thumb.jpeg"
+img: "/posts/images/artworks/artwork02_thumb.jpeg"
 ---
 
 <figure>
-    <img class="title-image" src="{{site.image_location}}/project/artwork02_thumb.jpeg" alt="title img">
+    <img class="title-image" src="{{site.image_location}}/artworks/artwork02_thumb.jpeg" alt="title img">
 </figure>
