--- a/posts/_posts/devlogs/2024-08-02-devlogs002.md
+++ b/posts/_posts/devlogs/2024-08-02-devlogs002.md
@@ -6,6 +6,9 @@ date: 2024-08-02 21:33:20 +0700
 tag: "devlog"
 categories: devlog
 usemathjax: true
+sitemap :
+  changefreq : daily
+  priority : 1.0
 ---
 
 <figure>
