--- a/posts/_posts/devlogs/2024-07-11-devlogs001.md
+++ b/posts/_posts/devlogs/2024-07-11-devlogs001.md
@@ -23,13 +23,17 @@ usemathjax: true
   }
 </style>
 
-**안녕하세요, Studio MM의 개발 일지 블로그에 오신 것을 환영합니다!** 🎮  
-이곳에서 우리는 상상 속 세계를 픽셀과 코드로 그려내며, 그 과정을 여러분과 함께 나누고자 합니다.
+**안녕하세요, Studio MM의 블로그에 오신 것을 환영합니다!** 🎮  
+이곳에서 우리는 상상 속 세계를 픽셀과 코드로 그려내며, 그 과정을 여러분과 함께 나누고자 합니다.   
+저희 모든 작업물들과 개발 과정들을 이 블로그에 포스팅할 예정입니다.   
+픽셀 하나, 코드 한 줄이 모여 놀라운 이야기를 만들어냅니다.
 
-<div class="highlight-quote">
-  픽셀 하나, 코드 한 줄이 모여 놀라운 이야기를 만들어냅니다. <br>  
-  **함께 꿈꾸고, 함께 나아가요!**
-</div>
+<br>  
 
-게임을 사랑하는 마음으로 시작된 여정이 여러분과 함께할 때 더 특별해질 거라 믿습니다.  
-앞으로의 개발 여정이 궁금하시다면, 이 블로그를 자주 찾아와 주세요. 여러분의 피드백은 우리의 성장을 위한 **소중한 힘**이 됩니다.
+**함께 꿈꾸고, 함께 나아가요!**
+
+<br>
+
+앞으로의 개발 여정이 궁금하시다면, 이 블로그를 자주 찾아와 주세요. 여러분의 피드백은 우리의 성장을 위한 **소중한 힘**이 됩니다.   
+저희 블로그를 찾아와주셔서 정말 감사합니다.   
+즐거운 하루 되세요!   
