--- a/posts/_posts/devlogs/2024-08-21-devlogs003.md
+++ b/posts/_posts/devlogs/2024-08-21-devlogs003.md
@@ -14,7 +14,7 @@ sitemap :
 
 
 <figure>
-    <img class="title-image" src="{{ site.image_location }}/devlogs/slope_add.gif" alt="end fetchers title">
+    <img class="title-image" src="{{ site.image_location }}/devlogs/slope_add.gif" alt="main image">
 </figure>
 
 <div class="screenshot-list">
