--- a/posts/_posts/devlogs/2024-08-21-devlogs003.md
+++ b/posts/_posts/devlogs/2024-08-21-devlogs003.md
@@ -9,22 +9,151 @@ usemathjax: true
 toc: true
 sitemap :
   changefreq : daily
-  priority : 1.1
+  priority : 1.2
 ---
 
 
+안녕하세요! 프로젝트 아르카의 무기 시스템에 대해 소개해드리겠습니다.
+
+던그리드 처럼 근접무기를 넣을까 고민을 했지만, 메인은 원거리 무기 그 중에서도 총기류를 팀원들과 함께 합의하고 채택했습니다.
+
+근접무기에 대해서는 추후에 업데이트 형식으로 넣을 수도 있을 것 같네요
+
+
+<br>
+
+## 무기 시스템 : 조준
+
+횡스크롤과 PC 컨트롤의 특성상 무기 조작은 캐릭터와 마우스 포인터 사이의 벡터값을 구하고 라디안을 통해 각도를 적용하여 회전하는 형식으로 구현했습니다.
+
 <figure>
-    <img class="title-image" src="{{ site.image_location }}/devlogs/slope_add.gif" alt="main image">
+    <img class="title-image" src="{{ site.image_location }}/devlogs/weaponhandler.gif" alt="Weapon Rotation">
 </figure>
+
+<br>
+
+또한 마우스 포인터의 위치에 따라 캐릭터 scale 값도 반전하여 무기와 같이 방향 전화을 하도록 추가했습니다.
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/weaponhandler2.gif" alt="Weapon Rotation">
+</figure>
+
+<br>
+<br>
+
+## 무기 시스템 : 총기 교체
+
+무기 시스템은 주무장, 부무장으로 구분합니다.
+
+### 주무장 리스트 
+
+- AR : Assualt Rifle
+- SG : Shot Gun
+- SR : Sniper Rifle
+- MG : Machine Gun
+- SMG : Sub Machine Gun
+
+<br>
+
+### 부무장 리스트
+
+- HG : Hand Gun
+
+<br>
+
+부무장은 권총 한 종류 밖에 없으나, 다양한 스킬들을 섞어 줄 계획입니다.
+
+추가로 투척류로써 수류탄 등을 구상하고 있습니다.
+
+<br>
+
+무기 스왑 키는 주무장 키보드 1, 부무장 키보드 2 입니다.
+
+<br>
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/weaponchange.gif" alt="Weapon Swap">
+</figure>
+
+<br>
+<br>
+
+## 무기 시스템 : 사격
+
+사격 기능에는 단발, 연발 사격이 존재합니다.
+
+부무장은 전부 단발이고 (추후 업그레이드 시 연발 가능하도록 설정할 예정입니다.)
+
+주무장은 단발, 연발 모두 가능합니다. (저격총, 샷건 제외)
+
+<br>
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/singleshot.gif" alt="Single Shot">
+</figure>
+
+_단발 사격_
+
+<br>
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/autoshot.gif" alt="Auto Shot">
+</figure>
+
+_연발 사격_
+
+<br>
+<br>
+
+### 총알 이펙트와 muzzle effect (총구 화염 이펙트) 그리고 착탄 이펙트
+
+유니티 URP 쉐이더 그래프를 활용하여 총알과 총구, 착탄 이펙트의 HDR 컬러와 Intensity 를 조절하여 화려하게 꾸몄습니다.
+
+착탄 이펙트는 파티클 시스템을 활용하기도 했습니다.
+
+<br>
 
 <div class="screenshot-list">
     <figure>
-        <img class="screenshot" src="{{site.image_location}}/devlogs/slope.gif" alt="screenshot img 1">
+        <img class="screenshot" src="{{site.image_location}}/devlogs/weaponlightoff.png" alt="URP Light Off">
     </figure>
     <figure>
-        <img class="screenshot" src="{{site.image_location}}/devlogs/move.gif" alt="screenshot img 2">
-    </figure>
-    <figure>
-        <img class="screenshot" src="{{site.image_location}}/devlogs/jump.gif" alt="screenshot img 3">
+        <img class="screenshot" src="{{site.image_location}}/devlogs/weaponlighton.png" alt="URP Light On">
     </figure>
 </div>
+
+또한 2D Spot Light 를 활용하여 총을 발사할 때 광원 효과를 적용시키기도 했습니다.
+
+좌측은 불빛이 없는 상태, 우측은 불빛에 영향을 받는 상태
+
+<br>
+
+### 주무기 연발 사격 이펙트
+
+<figure>
+    <img class="screenshot" src="{{site.image_location}}/devlogs/arshot1.gif" alt="screenshot img 1">
+ </figure>
+
+<figure>
+    <img class="screenshot" src="{{site.image_location}}/devlogs/arshot2.gif" alt="screenshot img 2">
+</figure>
+
+
+<br>
+<br>
+
+### 보조무기 사격 이펙트
+
+<figure>
+    <img class="screenshot" src="{{site.image_location}}/devlogs/hgshot1.gif" alt="screenshot img 1">
+</figure>
+
+<figure>
+    <img class="screenshot" src="{{site.image_location}}/devlogs/hgshot2.gif" alt="screenshot img 2">
+</figure>   
+
+<br>
+
+여기까지 긴 글 읽어주셔서 정말 감사합니다! 
+
+다음 포스트는 Parallax Background 와 맵 이펙트들과 Light 시스템에 대한 포스트가 될 것 같습니다.
