--- a/posts/_posts/devlogs/2024-08-21-devlogs003.md
+++ b/posts/_posts/devlogs/2024-08-21-devlogs003.md
@@ -13,11 +13,15 @@ sitemap :
 ---
 
 
-안녕하세요! 프로젝트 아르카의 무기 시스템에 대해 소개해드리겠습니다.
+안녕하세요! 프로젝트 아르카 두 번째 개발일지 입니다!
 
-던그리드 처럼 근접무기를 넣을까 고민을 했지만, 메인은 원거리 무기 그 중에서도 총기류를 팀원들과 함께 합의하고 채택했습니다.
+이번 포스트에서는 무기 시스템에 대해 소개해드리겠습니다.
 
-근접무기에 대해서는 추후에 업데이트 형식으로 넣을 수도 있을 것 같네요
+처음에는 던그리드 처럼 근접무기를 넣을까 고민을 했지만, 
+
+메인은 원거리 무기 그 중에서도 총기류를 팀원들과 함께 합의하고 채택했습니다.
+
+근접무기에 대해서는 추후에 업데이트 형식으로 넣을 수도 있을 것 같습니다.
 
 
 <br>
@@ -32,7 +36,7 @@ sitemap :
 
 <br>
 
-또한 마우스 포인터의 위치에 따라 캐릭터 scale 값도 반전하여 무기와 같이 방향 전화을 하도록 추가했습니다.
+또한 마우스 포인터의 위치에 따라 캐릭터 scale 값도 반전하여 무기와 같이 방향 전환을 하도록 추가했습니다.
 
 <figure>
     <img class="title-image" src="{{ site.image_location }}/devlogs/weaponhandler2.gif" alt="Weapon Rotation">
