--- a/posts/_posts/artworks/2024-08-15- artworks01.md
+++ b/posts/_posts/artworks/2024-08-15- artworks01.md
@@ -1,14 +1,22 @@
 ---
 layout: post
-title:  "캐릭터 일러스트 작업 : 주인공, 닥터"
+title:  "캐릭터 소개 : 윤하(Yoon Ha)"
 description: 
 date: 2024-08-15 14:29:20 +0700
 tag: "art"
 categories: art
 usemathjax: true
-img: "/posts/images/artworks/artwork01_thumb.jpeg"
+img: "/posts/images/artworks/yoonha.png"
 ---
 
 <figure>
-    <img class="title-image" src="{{site.image_location}}/artworks/artwork01_main.jpeg" alt="title img">
+    <img class="title-image" src="{{site.image_location}}/artworks/yoonha.png" alt="title img">
 </figure>
+
+<br>
+
+우리의 첫 번째 주인공 캐릭터 윤하(Yoon Ha)입니다.
+
+윤하는 아르카 인더스트리 특수 용병이자, 1차 대재앙 시대의 생존자입니다.
+
+수많은 전투와 사선을 넘나드는 그녀는 강화된 반사 신경과 총기 숙련으로 어떤 전장에서도 빛을 발합니다.
