--- a/posts/_posts/artworks/2024-10-12- artworks02.md
+++ b/posts/_posts/artworks/2024-10-12- artworks02.md
@@ -1,14 +1,29 @@
 ---
 layout: post
-title:  "캐릭터 일러스트 작업 : 엔지니어"
+title:  "캐릭터 소개 : 네비아(Nevia)"
 description: 
 date: 2024-10-12 18:41:30 +0700
 tag: "art"
 categories: art
 usemathjax: true
-img: "/posts/images/artworks/artwork02_thumb.jpeg"
+img: "/posts/images/artworks/nevia.png"
 ---
 
 <figure>
-    <img class="title-image" src="{{site.image_location}}/artworks/artwork02_thumb.jpeg" alt="title img">
+    <img class="title-image" src="{{site.image_location}}/artworks/nevia.png" alt="title img">
+</figure>
+
+<br>
+
+우리의 두 번째 공식 캐릭터인 네비아(Nevia) 입니다!
+
+아르카 인더스트리의 바이러스 연구원이자 천재적인 해커로 유명합니다.
+
+낮에는 연구, 밤에는 밤새 게임을 즐겨하며 심심할 땐 아르카의 적대적인 기업 정보를 해킹하여 탈취하는 것을 즐깁니다.
+
+
+<br>
+
+<figure>
+    <img class="title-image" src="{{site.image_location}}/artworks/yoonha_lenny_two.jpeg" alt="Yoonha & Nevia Two Shot">
 </figure>
