--- a/posts/_posts/artworks/2024-10-12- artworks02.md
+++ b/posts/_posts/artworks/2024-10-12- artworks02.md
@@ -24,6 +24,10 @@ img: "/posts/images/artworks/nevia.png"
 
 <br>
 
+윤하와 함께 
+
+영혼의 단짝?
+
 <figure>
     <img class="title-image" src="{{site.image_location}}/artworks/yoonha_lenny_two.jpeg" alt="Yoonha & Nevia Two Shot">
 </figure>
