--- a/posts/_posts/devlogs/2024-09-08-devlogs004.md
+++ b/posts/_posts/devlogs/2024-09-08-devlogs004.md
@@ -12,19 +12,126 @@ sitemap :
   priority : 1.1
 ---
 
+이번 포스트는 Parallax Background 라는 배경 작업과 각종 라이트 시스템과 맵 이펙트 작업에 대해 소개해볼까 합니다.
+
+<br>
+
+## Parallax Background
+
+Parallax Background 는 게임에서 배경이 캐릭터의 움직임에 따라 여러 레이어로 구성된 배경들이 서로 다른 속도로 움직이게 하는 기법입니다.
+
+배경에 입체감을 주어 게임에 몰입감을 더해주도록 만들었습니다.
 
 <figure>
-    <img class="title-image" src="{{ site.image_location }}/devlogs/slope_add.gif" alt="main image">
+    <img class="title-image" src="{{ site.image_location }}/devlogs/bg1.gif" alt="Parallax BG1">
 </figure>
 
-<div class="screenshot-list">
-    <figure>
-        <img class="screenshot" src="{{site.image_location}}/devlogs/slope.gif" alt="screenshot img 1">
-    </figure>
-    <figure>
-        <img class="screenshot" src="{{site.image_location}}/devlogs/move.gif" alt="screenshot img 2">
-    </figure>
-    <figure>
-        <img class="screenshot" src="{{site.image_location}}/devlogs/jump.gif" alt="screenshot img 3">
-    </figure>
-</div>
+<br>
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/bg2.gif" alt="Parallax BG2">
+</figure>
+
+<br>
+
+위 이미지를 보면 가장 뒤의 산은 거의 움직이지 않고, 중간의 큰 나무들은 천천히, 가장 가까운 발판은 빠르게 움직여서 실제로 입체적인 공간 속에서 움직이는 느낌을 줍니다.
+
+<br>
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/bg3.gif" alt="Parallax BG3">
+</figure>
+
+<br>
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/bg4.gif" alt="Parallax BG4">
+</figure>
+
+<br>
+
+캐릭터 시점으로 보면 위와 같습니다.
+
+<br>
+<br>
+<br>
+<br>
+
+## Light System
+
+다음은 Light System 에 대해 설명해드리겠습니다.
+
+빛 효과는 게임 전체의 퀄리티를 좌우할 만큼 중요한 부분입니다. 
+
+그렇기에 좀 더 자연스럽고 느낌있는 분위기를 내기 위해서 다양한 시도를 통해 지금의 색감을 구현했습니다.
+
+특히 Ambient Light, Post Processing 을 통한 bloom, intensity 등의 각종 효과들
+
+그리고 Gradient Color 를 통해 DayNightCycle 시스템을 구축하여 밤,낮 효과를 구현하였습니다.
+
+<br>
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/daynightcycle.gif" alt="DayNightCycle">
+</figure>
+
+DayNightCycle 은 총 4가지의 Global Light 를 사용합니다. Night, Day, NightRim, DayRim 으로 명명했습니다.
+
+4가지 빛은 크게 밤, 낮으로 구분하여 마주보고 있으며 설정한 시간 비율에 따라 회전하도록 설계했습니다.
+
+<br>
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/gradientColor.png" alt="Gradient Color Image">
+</figure>
+
+또한 설정한 비율에 따라 Gradient Color 값을 변경하여 색을 바꿉니다.
+
+<br>
+<br>
+
+### 인게임에 적용시켜본 모습
+
+<figure class="video">
+    <video controls width="100%" preload="metadata">
+        <source src="{{site.baseurl}}/posts/videos/daynightvideo.mp4" type="DayNightVideo/mp4">
+        Your browser does not support the video tag.
+    </video>
+</figure>
+
+<br>
+
+낮 시간
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/daytime.gif" alt="DayTime">
+</figure>
+
+<br>
+
+밤 시간
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/nighttime.gif" alt="NightTime">
+</figure>
+
+<br>
+
+해 질 녘
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/sunsettime.gif" alt="SunSetTime">
+</figure>
+
+<br>
+
+동틀 녘
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/dawntime.gif" alt="DawnTime">
+</figure>
+
+<br>
+<br>
+<br>
+<br>
