--- a/posts/_posts/devlogs/2024-09-08-devlogs004.md
+++ b/posts/_posts/devlogs/2024-09-08-devlogs004.md
@@ -93,11 +93,9 @@ DayNightCycle 은 총 4가지의 Global Light 를 사용합니다. Night, Day, N
 ### 인게임에 적용시켜본 모습
 
 <figure class="video">
-    <video controls width="100%" preload="metadata">
-        <source src="{{site.baseurl}}/posts/videos/daynightvideo.mp4" type="DayNightVideo/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/5mm7oYSP5sA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
+
 
 <br>
 
