--- a/posts/_posts/devlogs/2024-09-08-devlogs004.md
+++ b/posts/_posts/devlogs/2024-09-08-devlogs004.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Parallax Background 와 라이트, 맵 작업"
+title:  "Parallax Background 와 라이트, 맵 이펙트 작업"
 description: 
 date: 2024-09-08 23:00:12 +0700
 tag: "devlog"
@@ -133,3 +133,30 @@ DayNightCycle 은 총 4가지의 Global Light 를 사용합니다. Night, Day, N
 <br>
 <br>
 <br>
+
+## 맵 이펙트
+
+백그라운드에 맞는 겨울 느낌을 주기 위해 맵에 이펙트들을 추가하는 작업을 진행했습니다.
+
+유니티의 Particle System 을 사용해서 간단하게 눈 내리는 효과와 쉐이더 그래프를 사용하여 안개 효과를 구현했습니다.
+
+<br>
+
+밤의 모습
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/snoweffectnight.gif" alt="Snow Effect Night">
+</figure>
+
+<br>
+
+낮의 모습.. 낮에는 별로 티가 안나는군요 이 부분을 수정을 좀 해봐야 곘네요!
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/devlogs/snoweffectday.gif" alt="Snow Effect Day">
+</figure>
+
+<br>
+<br>
+
+이상입니다!
