--- a/posts/_posts/devlogs/2024-09-08-devlogs004.md
+++ b/posts/_posts/devlogs/2024-09-08-devlogs004.md
@@ -65,9 +65,9 @@ Parallax Background 는 게임에서 배경이 캐릭터의 움직임에 따라 
 
 그렇기에 좀 더 자연스럽고 느낌있는 분위기를 내기 위해서 다양한 시도를 통해 지금의 색감을 구현했습니다.
 
-특히 Ambient Light, Post Processing 을 통한 bloom, intensity 등의 각종 효과들
+특히 Ambient Light, Post Processing 을 통한 bloom, intensity 등의 각종 효과들 그리고 Gradient Color 
 
-그리고 Gradient Color 를 통해 DayNightCycle 시스템을 구축하여 밤,낮 효과를 구현하였습니다.
+값들을 시간의 경과에 따라 바꿔주는 DayNightCycle 시스템을 구축하여 밤,낮 효과를 구현하였습니다.
 
 <br>
 
