update lenny artwork

--- a/posts/_posts/artworks/2024-10-19- artworks03.md
+++ b/posts/_posts/artworks/2024-10-19- artworks03.md
@@ -10,7 +10,7 @@ img: "/posts/images/artworks/lenny.jpeg"
 ---
 
 <figure>
-    <img class="title-image" src="{{site.image_location}}/artworks/lenny.jpeg" alt="title img">
+    <img class="title-image" src="{{site.image_location}}/artworks/lennyOrigin.png" alt="title img">
 </figure>
 
 <br>
@@ -39,3 +39,15 @@ img: "/posts/images/artworks/lenny.jpeg"
 </div>
 
 좌 : 레니 맨손, 우 : 레니 의수
+
+<br>
+<br>
+
+
+2024.11.20 업데이트
+
+## 레니 작업 과정
+
+<figure>
+    <img class="title-image" src="{{ site.image_location }}/artworks/lenny_workflow.gif" alt="Lenny workflow">
+</figure>
