--- a/posts/_posts/artworks/2024-10-19- artworks03.md
+++ b/posts/_posts/artworks/2024-10-19- artworks03.md
@@ -6,7 +6,7 @@ date: 2024-10-12 18:41:30 +0700
 tag: "art"
 categories: art
 usemathjax: true
-img: "/posts/images/artworks/lenny.jpeg"
+img: "/posts/images/artworks/lennyOrigin.png"
 ---
 
 <figure>
