--- a/posts/_posts/artworks/2024-10-19- artworks03.md
+++ b/posts/_posts/artworks/2024-10-19- artworks03.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "캐릭터 소개 : 레니(Lenny) (임시)"
+title:  "캐릭터 소개 : 레니(Lenny)"
 description: 
 date: 2024-10-12 18:41:30 +0700
 tag: "art"
