--- a/posts/_posts/artworks/2024-10-19- artworks03.md
+++ b/posts/_posts/artworks/2024-10-19- artworks03.md
@@ -6,11 +6,11 @@ date: 2024-10-12 18:41:30 +0700
 tag: "art"
 categories: art
 usemathjax: true
-img: "/posts/images/artworks/lennyOrigin.png"
+img: "/posts/images/artworks/lennyFinal.png"
 ---
 
 <figure>
-    <img class="title-image" src="{{site.image_location}}/artworks/lennyOrigin.png" alt="title img">
+    <img class="title-image" src="{{site.image_location}}/artworks/lennyFinal.png" alt="title img">
 </figure>
 
 <br>
