--- a/posts/_posts/sounds/2024-10-21- soundworks01.md
+++ b/posts/_posts/sounds/2024-10-21- soundworks01.md
@@ -13,3 +13,4 @@ img: "/posts/images/devlogs/projectName.png"
     <img class="title-image" src="{{site.image_location}}/devlogs/projectName.png" alt="title img">
 </figure>
 
+수정중
